# vicharak-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
_docs/: Drf-Tutorial-Docs.md  README.md  filtering.md  models.md  pagination.md  permissions.md  serialization.md  setup.md  test.md  views.md
collaborator/: models.py  serializers.py
core/: settings.py  urls.py
docs/: README.md  authentication.md  configuration.md  deployment.md  filtering.md  models.md  pagination.md  permissions.md  serialization.md  setup.md  throttling.md  views.md
role/: models.py  serializers.py  views.py
user/: models.py  serializers.py  views.py
vichar/: models.py  serializers.py  views.py
vicharak/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
vicharak/serializers/: collaborators.py  roles.py  users.py  vichars.py
vicharak/views/: collaborators.py  roles.py  users.py  vichars.py
